# ccgu

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  duplicate-alternatives.h  duplicate.cpp  timemeasure.h
include/: CMakeLists.txt  duplicate.h  transformopt.h
tests/: CMakeLists.txt  duplicate.cpp  transformopt.cpp
